# poly-shield-bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ACCEPTANCE_CHECKLIST.md  INTEGRATION_TEST_PLAN.md  PROXY_WALLET_MODE_GUIDE.md  STOP_LOSS_TAKE_PROFIT_GUIDE.md  SYSTEM_ARCHITECTURE.md  TELEGRAM_BOT_OPERATIONS.md
scripts/: backfill_task_titles.py
src/poly_shield/: __init__.py  cli.py  config.py  executor.py  polymarket.py  positions.py  quotes.py  rules.py  secret_store.py  wallet_identity.py  watcher.py
src/poly_shield/backend/: __init__.py  api.py  market_stream.py  models.py  runtime.py  security.py  server.py  service.py  store.py  telegram_bot.py  user_stream.py
src/poly_shield/backend/templates/: base.html  index.html
src/poly_shield/backend/templates/partials/: health.html  health_chip.html  overview.html  positions.html  runtime_dot.html  task_create_modal.html  task_detail.html  task_detail_records_chunk.html  task_edit_modal.html  taskboard.html
src/poly_shield/backend/web/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_market_stream.py  test_positions.py  test_proxy.py  test_rules.py  test_runtime.py  test_secret_store.py  test_security.py  test_server.py  test_service.py  test_store.py  test_telegram_bot.py  test_user_stream.py  test_wallet_identity.py  test_watcher.py
